<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mybckg"
    tools:context="com.ssndevelopers.betacas1.studReg"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/editText7"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/stud_name"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"

        android:textStyle="bold"
        tools:ignore="RtlHardcoded"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/editText10"
        app:layout_constraintRight_toRightOf="@+id/editText10"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="9dp"
        app:layout_constraintLeft_toLeftOf="@+id/editText10" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/d_o_b_dd_mm_yyyy"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"

        android:textStyle="bold"
        tools:ignore="RtlHardcoded"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/editText11"
        app:layout_constraintRight_toRightOf="@+id/editText11"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="12dp"
        app:layout_constraintLeft_toLeftOf="@+id/editText11" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="127dp"
        android:layout_height="40dp"
        android:layout_marginStart="18dp"
        android:ems="10"
        android:hint="@string/class_sem"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"

        android:textStyle="bold"
        tools:ignore="RtlHardcoded"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/button6"
        android:layout_marginTop="62dp"
        app:layout_constraintTop_toBottomOf="@+id/editText11"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="62dp"
        app:layout_constraintLeft_toRightOf="@+id/editText12" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/roll_no"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"

        android:textStyle="bold"
        tools:ignore="RtlHardcoded"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/editText8"
        app:layout_constraintRight_toRightOf="@+id/editText8"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="7dp"
        app:layout_constraintLeft_toLeftOf="@+id/editText8" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/session"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"

        android:textStyle="bold"
        tools:ignore="RtlHardcoded"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/editText13"
        app:layout_constraintRight_toRightOf="@+id/editText13"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="11dp"
        app:layout_constraintLeft_toLeftOf="@+id/editText13" />

    <EditText
        android:id="@+id/editText12"
        android:layout_width="118dp"
        android:layout_height="0dp"
        android:layout_marginStart="38dp"
        android:ems="10"
        android:hint="@string/branch"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"

        android:textStyle="bold"
        tools:ignore="RtlHardcoded"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/editText9"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText9" />

    <EditText
        android:id="@+id/editText13"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="E-MAIL"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"

        android:textStyle="bold"
        tools:ignore="HardcodedText,RtlHardcoded"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintRight_toRightOf="@+id/editText9"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="64dp"
        app:layout_constraintLeft_toLeftOf="@+id/editText12" />

    <Button
        android:id="@+id/button6"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="49dp"

        android:onClick="RegStud"
        android:text="ADD STUDENT"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/button29"
        app:layout_constraintRight_toRightOf="@+id/editText13"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/editText13" />

    <Button
        android:id="@+id/button29"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="49dp"

        android:onClick="RegStud"
        android:text="HOME"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/button6"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/button6" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher_round"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="87dp"
        app:layout_constraintRight_toRightOf="@+id/editText7"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
